# to-rm-courses

./: .gitattributes  .gitignore  .gitmodules  README.md
GMB 2022/: README.md  convenio-geral-ufc-portugues-espanhol.doc
Julia_robot/: platformio.ini
Reconhecimento de padrões/: trab1.ipynb
adaptive-filtering/: README.md
bsc_dsp/: README.md
bsc_fpga/: README.md
bsc_radio_enlace/: README.md
computational-intelligence/: README.md
digital-communication-systems/: qpsk_2020a.slx
digital-communications/: README.md  gray_code.m  mqam_2020a.slx  qpsk_2020a.slx
gnss/: README.md
gnss-data-processing/: README.md
identificação_de_sistemas/: pyproject.toml
linear-algebra/: README.md
linear_algebra/: README.md
matrix_diff_ref/: main.tex  refs.bib
msc_mult_lin_alg/: README.md
msc_pes/: README.md
multilinear-algebra/: README.md
notations_ref/: Makefile  default_preamble.tex  main.tex
numerical-methods/: README.md
optmization-theory/: README.md
pattern-recognition/: README.md
phd_adap_filt/: README.md
phd_ica/: README.md
phd_id_sist/: README.md
phd_opt_theory/: README.md
phd_rec_padr/: README.md
reconhecimento_de_padrões/: pyproject.toml  trab1.ipynb  trab1.py
reconhecimento_de_padrões/TC2/: TC2.ipynb
reconhecimento_de_padrões/TC3/: TC3.ipynb  TC3.m
reconhecimento_de_padrões/list1/: list.ipynb  pyproject.toml
scd_teach/: mqam.slx  qpsk_2019a.slx  qpsk_2020a.slx  qpsk_2020a.slx.r2020a
statistical-signal-processing/: README.md
system-identification/: README.md
teach_dsp/: lista_TZ.tex
teach_scd/: README.md
(+606 files in other folders)
