[tool.poetry]
name = "reconhecimento_de_padrões"
version = "0.1.0"
description = ""
authors = ["tapyu <rubem.engenharia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.6.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
